--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
@@ -10,12 +11,12 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
-
     "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-   }
-
-
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://carpben.github.io/fccLeaders/"
 }
